[ref] reformat code
see issue #21